Fixed up jumping logo when shrinking page

--- a/css/main.css
+++ b/css/main.css
@@ -5,8 +5,9 @@ body {
 }
 
 #page-wrap {
-    position: relative;
     min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 .menu-options {
@@ -63,8 +64,20 @@ a:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    margin-top: 9%;
+    flex: 1;
+}
+
+.center-main {
+    align-self: center;
+    padding-top: 123px;
+}
+
+.logo {
+    height: 91px;
+    width: 272px;
+    max-width: 100%;
+    display: block;
+    margin: auto;
 }
 
 #text {
@@ -102,7 +115,7 @@ a:hover {
 }
 
 .search-form {
-    margin-top: 2%;
+    margin-top: 4%;
 }
 
 .search-btn-wrap {
@@ -136,7 +149,8 @@ input[type=button] + input[type=button] {
     font-size: 13px;
     color: #222222;
     line-height: 28px;
-    margin-top: 32px;
+    margin-top: 13px;
+    text-align: center;
 }
 
 #latino-link {
@@ -145,9 +159,7 @@ input[type=button] + input[type=button] {
 
 #footer {
     background-color: #f2f2f3;
-    position: absolute;
     color:#70757a;
-    bottom: 0;
     width: 100%;
     padding-top: 15px;
     padding-bottom: 15px;
